--- a/Front-end/BookstoreWebApp/src/app/app.component.html
+++ b/Front-end/BookstoreWebApp/src/app/app.component.html
@@ -1,3 +1,11 @@
-<h1>Hello!</h1>
+<div class='container'>
 
-<router-outlet></router-outlet>
+    <nav class="navbar navbar-expand-md bg-light navbar-dark">
+        <ul class="navbar navbar-nav">
+            <li class="nav-item">
+                <button routerLink="bookview" class="m-1 btn btn-light btn-outline-primary" Button> adminview</button>
+            </li>
+        </ul>
+    </nav>
+    <router-outlet></router-outlet>
+</div>
