--- a/Front-end/BookstoreWebApp/src/app/bookview/show/show.component.html
+++ b/Front-end/BookstoreWebApp/src/app/bookview/show/show.component.html
@@ -1,1 +1,49 @@
-<p>show works!</p>
+<!-- Button trigger modal -->
+<button type="button" class="btn btn-primary float-right" data-bs-toggle="modal" data-bs-target="#exampleModal"
+    (click)="addClick()" data-backdrop="static" data-keyboard="false">
+    Add book
+</button>
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-xl" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">{{ModalTitle}}</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"
+                (click)="closeClick()"></button>
+            </div>
+            <div class="modal-body">
+                <app-add-edit [book]="book" *ngIf="ActivateAddEditBook"></app-add-edit>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
+        </div>
+    </div>
+</div>
+<table class="table table-striped">
+    <thead>
+        <tr>
+            <th>ID</th>
+            <th>Bookname</th>
+            <!-- <th>price</th>
+            <th>picture_url</th>
+            <th>price</th> -->
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let dataItem of Bookviewlist">
+            <td>{{dataItem.id}}</td>
+            <td>{{dataItem.bookname}}</td>
+            <td>
+                <button type="button" class="btn btn-primary float-right" data-bs-toggle="modal"
+                    data-bs-target="#exampleModal" (click)="editClick(dataItem)" data-backdrop="static" data-keyboard="false"
+                >
+                    Edit
+                </button>
+                <button type="button" class="btn btn-primary mr-1">delete</button>
+            </td>
+        </tr>
+    </tbody>
+</table>
