--- a/Front-end/BookstoreWebApp/src/app/bookview/add-edit/add-edit.component.html
+++ b/Front-end/BookstoreWebApp/src/app/bookview/add-edit/add-edit.component.html
@@ -30,9 +30,9 @@
         placeholder="Enter Book Name">
     </div>
 </div>
-<button (click)="AddBook()" *ngIf="book.BookID==0" class="btn btn-primary">
+<button (click)="AddBook()" *ngIf="book.id==0" class="btn btn-primary float-right">
     Add
 </button>
-<button (click)="UpdateBook()" *ngIf="book.BookID!=0" class="btn btn-primary">
+<button (click)="UpdateBook()" *ngIf="book.id!=0" class="btn btn-primary float-right">
     Update
 </button>
