--- a/Front-end/BookstoreWebApp/src/app/app.component.html
+++ b/Front-end/BookstoreWebApp/src/app/app.component.html
@@ -1,25 +1,26 @@
-<header class="header sticky sticky--top js-header">
+<header class="header sticky sticky--top js-header" style="z-index:100">
   <div class="navbar-header">
     <a class="navbar-brand" href="">
       <span class="brand-line brand-line-1">&nbsp;&nbsp;Rent a Book from Tanawat</span>
     </a>
     <ul class="nav-main">
-      <a style="margin: 20px; color: white;"href="">Home</a>
-      <a style="margin: 20px; color: white;"href="">About</a>
-      <a style="margin: 20px; color: white;"href="">Contact</a>
-      <a title="Admin" href="" class="float-right link-light" routerLink="Adminview" style="float:right; padding: 0px; height: 0px;">
-      <fa-icon [icon]="faUsersCog" size="2x"></fa-icon>
-      Admin view
+      <a style="margin: 20px; color: white;" href="">Home</a>
+      <a style="margin: 20px; color: white;" href="">About</a>
+      <a style="margin: 20px; color: white;" href="">Contact</a>
+      <a title="Admin" href="" class="float-right link-light" routerLink="Adminview"
+        style="float:right; padding: 0px; height: 0px;">
+        <fa-icon [icon]="faUsersCog" size="2x"></fa-icon>
+        Admin view
       </a>
     </ul>
   </div>
 </header>
 <div class='container'>
-  <section class="section-hero">
+  <section class="section-hero" style="border-radius: 10px;">
     <div class="row">
       <div class="col-md-8 col-12 hero-content text-left" style="padding-left: 30px;">
-        <div class="hero-title">บริการให้เช่าหนังสือที่ดีที่สุด</div>
-        <div class="hero-sub-title">เราช่วยคุณหาหนังสือซ่อมคุณภาพได้ง่าย</div>
+        <div class="hero-title" style="padding-bottom: 25px;">บริการให้เช่าหนังสือที่ดีที่สุด</div>
+        <div class="hero-sub-title">เราช่วยคุณหาหนังสือคุณภาพได้ง่าย</div>
         <div class="text-left d-none d-sm-block " style="padding-top: 20px; padding-left: 10px; color: #fff;">
           <ul class="hero-list list-unstyled">
             <li><i class="fas fa-check text-primary"></i>&nbsp;&#x2609;&nbsp;หนังสือมีการตรวจสอบความเรียบร้อย
