--- a/Front-end/BookstoreWebApp/src/app/app.component.css
+++ b/Front-end/BookstoreWebApp/src/app/app.component.css
@@ -12,6 +12,9 @@ body {
 }
 .container{
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  padding: 20px;
+  margin-bottom: 5 rem;
+  border-radius: 15px;
 }
 .section-hero {
   background-image: url(/assets/img/history-marketing-theory-banner-1140x410.jpg);
